--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@status) do |f| %>
+<%= simple_form_for(@status, html: {class: 'form-horizontal'}) do |f| %>
   <% if @status.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
@@ -10,16 +10,10 @@
       </ul>
     </div>
   <% end %>
+  <%= f.input :user_id, collection: User.all, label_method: :full_name %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
-  </div>
+  <%= f.input :content %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.button :submit %>
   </div>
 <% end %>
