--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-  <%= f.input :user_id, collection: User.all, label_method: :full_name %>
+  <%= f.input :user_id, collection: User.order(:first_name), label_method: :full_name, selected: current_user.full_name %>
 
   <%= f.input :content %>
   <div class="actions">
