--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 				<a href="#" class="brand">TreeBook</a>
 				<ul class="nav">
 					<li>
-						<%= link_to "All Statuses", statuses_path %>
+						<%= link_to "All Statuses", feed_path %>
 					</li>
 				</ul>
 				<ul class="nav pull-right">
@@ -22,11 +22,11 @@
 							<%= link_to current_user.full_name, edit_user_registration_path %>
 						</li>
 						<li>
-							<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+							<%= link_to "Log Out", logout_path %>
 						</li>
 					<% else %>
-						<li><%= link_to "Register", new_user_registration_path %></li>
-						<li><%= link_to "Log in", new_user_session_path %></li>
+						<li><%= link_to "Register", register_path %></li>
+						<li><%= link_to "Log in", login_path %></li>
 					<% end %>
 				</ul>
 			</div>
